# mkdocs-repo-template

./: .pre-commit-config.yaml  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: publish.yaml
docs/: README.md
docs/utils/: extra.css  ordered-list-symbols.css  unordered-list-symbols.css
