[project]
name = "mkdocs-repo-template"
version = "0.1.0"
description = "MkDocs repository template"
authors = [
    {name = "Sihan A"}
]
license = {text = "MIT License"}
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.6.16",
    "pymdown-extensions>=10.16.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "flake8>=7.3.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "interrogate>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
